k8s/04-services.yaml
###################################
# detector-anomalias service
###################################
apiVersion: v1
kind: Service
metadata:
  name: detector-anomalias-service
  namespace: workloads
  labels:
    app: detector-anomalias-app
    istio.io/use-waypoint: waypoint-private
spec:
  type: ClusterIP
  selector:
    app: detector-anomalias-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
---
###################################
# users service
###################################
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: workloads
  labels:
    app: users-app
    istio.io/use-waypoint: waypoint-private
spec:
  type: ClusterIP
  selector:
    app: users-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
---
###################################
# login handler service
###################################
apiVersion: v1
kind: Service
metadata:
  name: login-handler-service
  namespace: workloads
  labels:
    app: login-handler-app
    istio.io/use-waypoint: waypoint-private
spec:
  type: ClusterIP
  selector:
    app: login-handler-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
---
###################################
# notificaciones service
###################################
apiVersion: v1
kind: Service
metadata:
  name: notificaciones-service
  namespace: workloads
  labels:
    app: notificaciones-app
    istio.io/use-waypoint: waypoint-private
spec:
  type: ClusterIP
  selector:
    app: notificaciones-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
---
###################################
# reservas service
###################################
apiVersion: v1
kind: Service
metadata:
  name: reservas-service
  namespace: workloads
  labels:
    app: reservas-app
    istio.io/use-waypoint: waypoint-private
spec:
  type: ClusterIP
  selector:
    app: reservas-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
---
###################################
# hospedajes service
###################################
apiVersion: v1
kind: Service
metadata:
  name: hospedajes-service
  namespace: workloads
  labels:
    app: hospedajes-app
    istio.io/use-waypoint: waypoint-private
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8003
###################################
apiVersion: v1
kind: Service
metadata:
  name: postgresdb-service
  namespace: workloads
  labels:
    app: postgres-db
spec:
  type: ClusterIP
  selector:
    app: postgres-db
  ports:
  - name: tcp-postgres
    protocol: TCP
    port: 5432
    targetPort: 5432
---
###################################
# pagos service
###################################
apiVersion: v1
kind: Service
metadata:
  name: pagos-service
  namespace: workloads
  labels:
    app: pagos-app
    istio.io/use-waypoint: waypoint-private
spec:
  type: ClusterIP
  selector:
    app: pagos-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
