k8s/postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: psql-pod
  labels:
    app: postgres-db
spec:
  containers:
    - name: postgres
      image: postgres:alpine3.22
      imagePullPolicy: IfNotPresent
      ports:
        - name: postgres
          containerPort: 5432
      readinessProbe:
        exec:
          command: ["sh", "-c", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"]
        initialDelaySeconds: 5
        periodSeconds: 5
        failureThreshold: 12
      livenessProbe:
        exec:
          command: ["sh", "-c", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"]
        initialDelaySeconds: 10
        periodSeconds: 10
        failureThreshold: 6
      # volumeMounts:
      #   - name: pgdata
      #     mountPath: /var/lib/postgresql/data
  # volumes:
  #   - name: pgdata
  #     emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: postgresdb-service
  labels:
    app: postgres-db
spec:
  type: ClusterIP
  selector:
    app: postgres-db
  ports:
    - name: tcp-postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
