k8s/services.yaml
###################################
# users service
###################################
apiVersion: v1
kind: Service
metadata:
  name: users-service
  labels:
    app: users-app
spec:
  type: ClusterIP
  selector:
    app: users-app
  ports:
    - name: http
      protocol: TCP
      port: 80          # Service port
      targetPort: 8000  # Container port
      # nodePort: 30000   # External port (30000-32767)
---
###################################
# hospedajes service
###################################
apiVersion: v1
kind: Service
metadata:
  name: hospedajes-service
  labels:
    app: hospedajes-app
spec:
  type: ClusterIP
  selector:
    app: hospedajes-app
  ports:
    - name: http
      protocol: TCP
      port: 80          # Service port
      targetPort: 8000  # Container port
      # nodePort: 30001   # External port (30000-32767)
