k8s/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
  labels:
    app: users-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-app
  template:
    metadata:
      labels:
        app: users-app
    spec:
      containers:
      - name: usersms
        image: usersms:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5 
          periodSeconds: 30
          failureThreshold: 3
---
###################################
# users service
###################################
apiVersion: v1
kind: Service
metadata:
  name: users-service
  labels:
    app: users-app
spec:
  type: ClusterIP
  selector:
    app: users-app
  ports:
    - protocol: TCP
      port: 80          # Service port
      targetPort: 8000  # Container port
      # nodePort: 30000   # External port (30000-32767)
