k8s/02-waypoint.yaml
###################################
# Waypoint proxy for the default namespace
# This handles L7 policies (authz, retries, traffic shifting)
# for east-west traffic INSIDE the mesh.
###################################
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: waypoint-private
  namespace: default
  labels:
    istio.io/waypoint-for: all
spec:
  gatewayClassName: istio-waypoint
  listeners:
  - name: mesh
    port: 15008
    protocol: HBONE
