k8s/ingress-istios.yaml

apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: travelhub-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
