k8s/destination-rules.yaml
###################################
# hospedajes destination rule and virtual service
###################################
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: hospedajes
spec:
  host: hospedajes-service.default.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 50
      # http:
      #   h2UpgradePolicy: DEFAULT
      #   http1MaxPendingRequests: 10  # queue before rejecting
      #   http2MaxRequests: 50         # max concurrent requests
      #   maxRequestsPerConnection: 5  # recycle connections
      #   maxRetries: 3
      # outlierDetection:
      #   consecutive5xxErrors: 3        # eject pod after 3 consecutive 5xx
      #   interval: 10s                  # check every 10s
      #   baseEjectionTime: 30s          # eject for 30s
      #   maxEjectionPercent: 50   
  subsets:
  - name: v1
    labels:
      version: v1
  # - name: v2
  #   labels:
  #     version: v2
---
###################################
# users destination rule and virtual service
###################################
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: users
spec:
  host: users-service.default.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 50
      http:
          http2MaxRequests: 1000
          maxRequestsPerConnection: 10
  subsets:
  - name: v1
    labels:
      version: v1
  # - name: v2
  #   labels:
  #     version: v2
