k8s/ingress.yaml
############################################
# Ingress configuration
############################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    # nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    # nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
  # kubernetes.io/ingress.class: "istio"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /users(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: users-service
              port:
                number: 80
        - path: /hospedajes(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: hospedajes-service
              port:
                number: 80
